# NepTrainKit

./: .readthedocs.yml  MANIFEST.in  NepTrainKit.py  README.md  README_CN.md  README_zh.md  __init__.py  main.py  pyproject.toml  requirements.txt  setup.py  utils.py  version.py
.github/workflows/: Build-with-Nuitka.yml  main.yml  python-publish.yml
Config/: config.sqlite  ptable.json
core/: __init__.py  calculator.py  config.py  message.py  nep.pyd  nep_cpu.pyd  structure.py  update.py
core/data/: __init__.py  base.py  io.py  nep.py
core/io/: base.py  nep.py  utils.py
core/plot/: canvas.py  nep.py  nep_plot.py  plot.py  structure.py  subplot.py  toolbar.py
core/widget/: __init__.py  settings.py  show_nep.py
docs/: NEP-dataset-display.md  index.md  requirements.txt
docs/source/: NEP-dataset-display.md  conf.py  index.rst
docs/source/_templates/: footer.html
docs/source/example/: NEP-display.md  Plot-descriptor.md  index.rst
docs/source/module/: NEP-dataset-display.md  index.rst
src/NepTrainKit/: __init__.py  _version.py  main.py  nep_cpu.pyd  src.qrc  src_rc.py  utils.py  version.py
src/NepTrainKit/Config/: config.sqlite
src/NepTrainKit/core/: __init__.py  calculator.py  config.py  message.py  structure.py  types.py  update.py
src/NepTrainKit/core/canvas/base/: canvas.py
src/NepTrainKit/core/canvas/pyqtgraph/: canvas.py
src/NepTrainKit/core/canvas/vispy/: canvas.py
src/NepTrainKit/core/custom_widget/: __init__.py  card_widget.py  completer.py  dialog.py  docker.py  input.py  label.py  layout.py  search_widget.py  settingscard.py
src/NepTrainKit/core/io/: base.py  nep.py  select.py  utils.py
src/NepTrainKit/core/pages/: __init__.py  makedata.py  settings.py  show_nep.py
src/NepTrainKit/core/plot/: __init__.py  canvas.py  makedata.py  nep.py  structure.py  toolbar.py
src/NepTrainKit/core/views/: __init__.py  cards.py  nep.py  structure.py  toolbar.py
src/NepTrainKit/core/widget/: __init__.py  makedata.py  settings.py  show_nep.py
src/NepTrainKit/src/qss/: theme.qss
src/nep_cpu/: nep.cpp  nep_bindings.cpp  nep_cpu.cpp
src/qss/: theme.qss
tools/: dimensionality_reduction.py  plot_descriptor.py
