[build-system]
requires = [
"wheel",
"numpy",
"setuptools>=68.0.0",
"pybind11>=2.12.0",
"setuptools-scm>=7"
]
build-backend = "setuptools.build_meta"


[project]
name = "NepTrainKit"
authors = [{ name = "Chen Cheng bing", email = "1747193328@qq.com" }]
dynamic = ["version"]

description = """
NepTrainKit is a Python package for visualizing and manipulating training datasets for NEP.
"""
readme = "README.md"
requires-python = ">=3.10,<3.13"
license= { "text"="GPL-3.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [

"PySide6-Fluent-Widgets>=1.7.0",
    "sobolsequence",
"loguru>=0.7.2",
"requests>=2.32.3",
"pyqtgraph>=0.13.7",
"PyOpenGL>=3.1.7",
"numpy>=1.26.0",
"vispy>=0.14.3",
]


[project.urls]
Homepage = "https://github.com/aboys-cb/NepTrainKit"
Documentation = "https://github.com/aboys-cb/NepTrainKit"
Repository = "https://github.com/aboys-cb/NepTrainKit"
Issues = "https://github.com/aboys-cb/NepTrainKit/issues"



[project.scripts]
NepTrainKit = "NepTrainKit.main:main"
nepkit = "NepTrainKit.main:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["NepTrainKit", "NepTrainKit.*" ]

[tool.setuptools.package-data]
"NepTrainKit.Config" = ["config.sqlite","ptable.json" ]

[tool.setuptools_scm]
# 可选配置（根据需求调整）：
# - 指定 Git 标签格式（默认匹配 v*）
tag_regex = "^v(?P<version>[0-9.]+(?:b[0-9]+)?)$"
# - 启用本地版本号（开发时生成 dev 版本）
local_scheme = "no-local-version"  # 或 "node-and-date"

write_to = "src/NepTrainKit/_version.py"

[tool.cibuildwheel.linux]
archs = ["auto64"]

